refactor: change code get api product
